--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,17 @@
 apply plugin: 'com.android.application'
 
 android {
+    packagingOptions {
+
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+
+        exclude 'META-INF/notice'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license'
+        exclude 'META-INF/license.txt'
+    }
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
@@ -19,6 +30,7 @@ android {
     }
 
     useLibrary 'org.apache.http.legacy'
+
 }
 
 dependencies {
@@ -26,8 +38,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
+
     testCompile 'junit:junit:4.12'
 }
