--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".ActivityController.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -20,21 +20,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DetailActivity"
+            android:name=".ActivityController.DetailActivity"
             android:label="Event Details - Matches ">
         </activity>
         <activity
-            android:name=".AddMatchActivity"
+            android:name=".ActivityController.AddMatchActivity"
             android:label="Add Matches ">
         </activity>
 
         <activity
-            android:name=".AddEventActivity"
+            android:name=".ActivityController.AddEventActivity"
             android:label="Add Events ">
         </activity>
 
         <activity
-            android:name=".AddDriverActivity"
+            android:name=".ActivityController.AddDriverActivity"
             android:label="Add Drivers ">
         </activity>
     </application>
